# rust_checker

./: .rustchecker.toml  Cargo.toml
.github/workflows/: rust_checker.yml
scripts/: install_git_hook.rs
src/: config.rs  fixer.rs  lib.rs  main.rs  plugin.rs  report.rs  rules.rs  scanner.rs  tooling.rs  unused_checker.rs
src/report/: badge.rs  html.rs  junit.rs
src/web/: mod.rs
tests/: validate.rs
