[package]
name = "rust_checker"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
tokio = { version = "1", features = ["full"] }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[[bin]]
name = "install_git_hook"
path = "scripts/install_git_hook.rs"
name = "web"
path = "src/bin/web.rs"
